src/objects/OrderStatusMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AS400_Status_Code__c</fullName>
        <label>AS400 Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS400_Status_Description__c</fullName>
        <label>AS400 Status Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATG_Order_Status__c</fullName>
        <label>ATG Order Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Line Item for this status can be cancelled</description>
        <label>Line Item Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Order_Line_Status__c</fullName>
        <label>SFDC Order Line Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Order_Status__c</fullName>
        <label>SFDC Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Status Map</label>
</CustomObject>